test: More tests for jreleaser-utils